#15 fixed navigation on small screens

--- a/assets/styles/sass-components/_navigation.scss
+++ b/assets/styles/sass-components/_navigation.scss
@@ -3,3 +3,10 @@
         display: none;
     }
 }
+
+.page-verwaltung,
+.page-login {
+    .button-collapse {
+        display: none;
+    }
+}
