--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9135,6 +9135,10 @@ footer {
 .page-homepage #useradmin-link {
   display: none; }
 
+.page-verwaltung .button-collapse,
+.page-login .button-collapse {
+  display: none; }
+
 .cluster > div, .marker-cluster > div {
   color: white !important;
   text-align: center !important;
@@ -9434,7 +9438,7 @@ body.page-login header {
   padding-left: 0; }
   body.page-verwaltung header .brand-logo,
   body.page-login header .brand-logo {
-    left: 20px;
+    left: 10px !important;
     transform: translateX(0%); }
 
 #user-modal table {
